src/objects/Quota__c.object
<CustomObject>
    <fields>
        <fullName>AccountProviso__c</fullName>
        <label>但し書き内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountReceiptName__c</fullName>
        <label>請求書宛名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillSaveFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>請求書確定FLG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingCal__c</fullName>
        <formula>IF ( ISBLANK(LeadRef__r.Relcontact__r.Account.Name) , (LeadRef__r.Relcontact__r.LastName &amp; &apos; &apos; &amp; LeadRef__r.Relcontact__r.FirstName) ,LeadRef__r.Relcontact__r.Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ご請求先</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <label>有効期間</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>言語</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadPdfShopCode__c</fullName>
        <label>見積書指定店舗</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadReceiptDate__c</fullName>
        <label>発行日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ご予約</label>
        <referenceTo>Lead__c</referenceTo>
        <relationshipLabel>見積</relationshipLabel>
        <relationshipName>QuotaLeadRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MainQuotaFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>最終決定見積</description>
        <label>最終見積フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuotaDescription__c</fullName>
        <label>説明</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QuotaName__c</fullName>
        <label>見積名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuotaStatus__c</fullName>
        <label>保存状態</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>仮保存</fullName>
                    <default>true</default>
                    <label>仮保存</label>
                </value>
                <value>
                    <fullName>本保存</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuotationComment__c</fullName>
        <label>見積書コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QuotationName__c</fullName>
        <label>見積書宛名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RespectLst__c</fullName>
        <label>敬称</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>G_MrList</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StampIsShowDiv__c</fullName>
        <description>見積書ハンコ表示：1
見積書ハンコ非表示:0</description>
        <label>見積書ハンコ表示・非表示</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalInc__c</fullName>
        <label>金額</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>見積</label>
    <nameField>
        <displayFormat>QT-{YYYYMMDD}-{00000}</displayFormat>
        <label>見積番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>